[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(14, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(18, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3"]
size = Vector2(18, 10)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.35)
scale = Vector2(12, 3)
position = Vector2(0, 12)
z_index = -1

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 2
frame = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Sensor" type="Area2D" parent="."]
monitoring = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
shape = SubResource("RectangleShape2D_2")

[node name="Sword" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
shape = SubResource("RectangleShape2D_3")

[node name="Slash" type="Sprite2D" parent="."]
visible = false
z_index = 2
scale = Vector2(0.66, 0.66)

[node name="Camera2D" type="Camera2D" parent="."]
current = true
position_smoothing_enabled = true
position_smoothing_speed = 6.0
limit_smoothed = true

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[connection signal="area_entered" from="Sensor" to="." method="_on_sensor_area_entered"]
[connection signal="area_exited" from="Sensor" to="." method="_on_sensor_area_exited"]
[connection signal="body_entered" from="Sword" to="." method="_on_sword_body_entered"]
